--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -1,6 +1,6 @@
 {% extends "pages/page.html" %}
 
-{% load geoanalytics_tags mezzanine_tags pages_tags hydroshare_tags %}
+{% load geoanalytics_tags mezzanine_tags pages_tags hydroshare_tags crispy_forms_tags%}
 
 {% block title %}
 
@@ -46,6 +46,7 @@
         <select class="form-control" name="resource-type" id="resource-type">
             <option value="GenericResource">Generic Resource</option>
             <option value="InstResource">RHESSys Instance Resource</option>
+            <option value="TimeSeriesResource">Time Series Resource</option>
         </select>
     </div>
   </div>
@@ -63,6 +64,34 @@
       <input type="text" class="form-control" name="creators" id="" placeholder="Creators" value="{{ user|best_name }}">
     </div>
   </div>
+
+    <div class="form-group">
+        <label for="" class="col-sm-2 control-label">Meta Data</label>
+        <div class="col-sm-10">
+{#            {{ creator_formset.management_form }}#}
+            {% crispy metadata_form %}
+
+        </div>
+    </div>
+
+{#   <div class="form-group">#}
+{#        <label for="" class="col-sm-2 control-label">Creators</label>#}
+{#        <div class="col-sm-10">#}
+{#            {{ creator_formset.management_form }}#}
+{#            {% crispy creator_formset creator_helper %}#}
+{##}
+{#        </div>#}
+{#   </div>#}
+{#    <div class="form-group">#}
+{#       <label for="" class="col-sm-2 control-label">Contributors</label>#}
+{#        <div class="col-sm-10">#}
+{#            {{ contributor_formset.management_form }}#}
+{#            {% for form in contributor_formset %}#}
+{#                {{ form|crispy }}#}
+{#            {% endfor %}#}
+{#        </div>#}
+{#   </div>#}
+
 
    <div class="form-group">
     <label for="" class="col-sm-2 control-label">Contributors</label>
@@ -96,24 +125,127 @@
 
 {% block extra_js %}
     <script type="text/javascript">
-    function deleteRow(r) {
-            $(r).remove();
-    }
+        function deleteRow(r) {
+                $(r).remove();
+        }
 
-    $(function() {
-        var fileCount = 1;
+        $(function() {
+            var fileCount = 1;
 
 
-        $("#add-row").click(function() {
-            fileCount++;
+            $("#add-row").click(function() {
+                fileCount++;
 
-            $("#files").append(
-                '<tr id="file' + fileCount + '">' +
-                    '<td><input class="form-control" type="file" name="file' + fileCount + '"/></td>' +
-                    '<td><button class="btn btn-danger btn-block deleter" onClick=\'deleteRow("#file' + fileCount + '")\'>Delete</button></td>' +
-                '</tr>'
-            );
+                $("#files").append(
+                    '<tr id="file' + fileCount + '">' +
+                        '<td><input class="form-control" type="file" name="file' + fileCount + '"/></td>' +
+                        '<td><button class="btn btn-danger btn-block deleter" onClick=\'deleteRow("#file' + fileCount + '")\'>Delete</button></td>' +
+                    '</tr>'
+                );
+                return false;
+            });
+        });
+        $(document).ready(function () {
+        // Code adapted from http://djangosnippets.org/snippets/1389/
+        function updateElementIndex(el, prefix, ndx) {
+            var id_regex = new RegExp('(' + prefix + '-\\d+-)');
+            var replacement = prefix + '-' + ndx + '-';
+            if ($(el).attr("for")) $(el).attr("for", $(el).attr("for").replace(id_regex,
+            replacement));
+            if (el.id) el.id = el.id.replace(id_regex, replacement);
+            if (el.name) el.name = el.name.replace(id_regex, replacement);
+        }
+
+        function deleteForm(btn, prefix) {
+            var formCount = parseInt($('#id_' + prefix + '-TOTAL_FORMS').val());
+            if (formCount > 1) {
+                // Delete the item/form
+                $(btn).parents('.item').slideUp(300);
+                $(btn).parents('.item').remove();
+                var forms = $("#" + prefix + ' .item'); // Get all the forms
+                // Update the total number of forms (1 less than before)
+                $('#id_' + prefix + '-TOTAL_FORMS').val(forms.length);
+                var i = 0;
+                // Go through the forms and set their indices, names and IDs
+                for (formCount = forms.length; i < formCount; i++) {
+                    $(forms.get(i)).children().children().each(function () {
+                        if ($(this).attr('type') == 'text') updateElementIndex(this, prefix, i);
+                        if($(this).is('input')) updateElementIndex(this, prefix, i);
+                    });
+                    $(forms.get(i)).find('input').each(function (){
+                        updateElementIndex(this, prefix, i);
+                    })
+                }
+            } // End if
+            else {
+                if (prefix == 'creators'){
+                    alert("Resource needs to have at least one creator!");
+                }
+            }
             return false;
+        }
+
+        function addForm(btn, prefix) {
+            var formCount = parseInt($('#id_' + prefix + '-TOTAL_FORMS').val());
+            // You can only submit a maximum of 10 todo items
+            if (formCount < 10) {
+                // Clone a form (without event handlers) from the first form
+                var row = $("#" + prefix + " .item:first").clone(false).get(0);
+                // Insert it after the last form
+                $(row).removeAttr('id').hide().insertAfter("#" + prefix + " .item:last").slideDown(300);
+
+                // Remove the bits we don't want in the new row/form
+                // e.g. error messages
+                $(".errorlist", row).remove();
+                $(row).children().removeClass("error");
+
+                // Relabel or rename all the relevant bits
+                $(row).children().children().each(function () {
+                    updateElementIndex(this, prefix, formCount);
+                    $(this).val("");
+                });
+                $(row).find('input').each(function () {
+                    updateElementIndex(this, prefix, formCount);
+                    if ($(this).attr('type') == 'button'){
+                        $(this).attr('value', 'Delete');
+                    }
+                    if ($(this).attr('type') == 'submit'){
+                        $(this).attr('value', 'Submit');
+                    }
+                })
+
+                // Add an event handler for the delete item/form link
+                $(row).find(".delete-creator").click(function () {
+                    return deleteForm(this, prefix);
+                });
+
+                $(row).find(".delete-contributor").click(function () {
+                    return deleteForm(this, prefix);
+                });
+
+                // Update the total form count
+                $("#id_" + prefix + "-TOTAL_FORMS").val(formCount + 1);
+            } // End if
+            else {
+                alert("Sorry, you can only enter a maximum of ten items.");
+            }
+            return false;
+        }
+        // Register the click event handlers
+        $("#addCreator").click(function () {
+            return addForm(this, "creators");
+        });
+
+        $(".delete-creator").click(function () {
+            return deleteForm(this, "creators");
+        });
+
+        $("#addContributor").click(function () {
+            return addForm(this, "contributors");
+        });
+
+        $(".delete-contributor").click(function () {
+            return deleteForm(this, "contributors");
         });
     });
     </script>
