--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -51,19 +51,19 @@
     </div>
   </div>
 
-  <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Title</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="title" id="" placeholder="Title">
-    </div>
-  </div>
+{#  <div class="form-group">#}
+{#    <label for="" class="col-sm-2 control-label">Title</label>#}
+{#    <div class="col-sm-10">#}
+{#      <input type="text" class="form-control" name="title" id="" placeholder="Title">#}
+{#    </div>#}
+{#  </div>#}
 
-  <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Creators</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="creators" id="" placeholder="Creators" value="{{ user|best_name }}">
-    </div>
-  </div>
+{#  <div class="form-group">#}
+{#    <label for="" class="col-sm-2 control-label">Creators</label>#}
+{#    <div class="col-sm-10">#}
+{#      <input type="text" class="form-control" name="creators" id="" placeholder="Creators" value="{{ user|best_name }}">#}
+{#    </div>#}
+{#  </div>#}
 
     <div class="form-group">
         <label for="" class="col-sm-2 control-label">Meta Data</label>
@@ -93,26 +93,26 @@
 {#   </div>#}
 
 
-   <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Contributors</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" name="contributors" id="" placeholder="Contributors" value="{{ user|best_name }}">
-    </div>
-   </div>
+{#   <div class="form-group">#}
+{#    <label for="" class="col-sm-2 control-label">Contributors</label>#}
+{#    <div class="col-sm-10">#}
+{#      <input type="text" class="form-control" name="contributors" id="" placeholder="Contributors" value="{{ user|best_name }}">#}
+{#    </div>#}
+{#   </div>#}
 
-  <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Abstract</label>
-    <div class="col-sm-10">
-        <textarea class="mceEditor charfield" cols="40" id="" name="abstract" rows="10" placeholder="Abstract"> </textarea>
-    </div>
-  </div>
+{#  <div class="form-group">#}
+{#    <label for="" class="col-sm-2 control-label">Abstract</label>#}
+{#    <div class="col-sm-10">#}
+{#        <textarea class="mceEditor charfield" cols="40" id="" name="abstract" rows="10" placeholder="Abstract"> </textarea>#}
+{#    </div>#}
+{#  </div>#}
 
-  <div class="form-group">
-    <label for="" class="col-sm-2 control-label">Subject Keywords</label>
-    <div class="col-sm-10">
-      <input type="text" class="form-control" id="" name='keywords' placeholder="Keywords">
-    </div>
-  </div>
+{#  <div class="form-group">#}
+{#    <label for="" class="col-sm-2 control-label">Subject Keywords</label>#}
+{#    <div class="col-sm-10">#}
+{#      <input type="text" class="form-control" id="" name='keywords' placeholder="Keywords">#}
+{#    </div>#}
+{#  </div>#}
 
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
@@ -210,7 +210,7 @@
                         $(this).attr('value', 'Delete');
                     }
                     if ($(this).attr('type') == 'submit'){
-                        $(this).attr('value', 'Submit');
+                        $(this).attr('value', 'Save');
                     }
                 })
 
