--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -67,6 +67,14 @@
 
 
             <h4>Other Metadata</h4>
+            <div class="form-group">
+            <label for="" class="col-sm-2 control-label">Meta Data</label>
+            <div class="col-sm-10">
+    {#            {{ creator_formset.management_form }}#}
+                {% crispy metadata_form %}
+
+            </div>
+    </div>
             <table class="table table-condensed">
             {% for term in dublin_core %}
                 {% ifnotequal term|dcterm 'Title' %}
