--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -68,7 +68,7 @@
 
             <h4>Other Metadata</h4>
             <div class="form-group">
-            <label for="" class="col-sm-2 control-label">Meta Data</label>
+            <label for="" class="col-sm-2 control-label">Science Metadata</label>
             <div class="col-sm-10">
     {#            {{ creator_formset.management_form }}#}
                 {% crispy metadata_form %}
